    * DEPRECATION: use TileCache.numTilesLoaded instead of Drawer.numTilesLoaded
    * DEPRECATION: use World.resetItems instead of Drawer.reset
    * DEPRECATION: use Drawer.clear and World.update instead of Drawer.update
    * DEPRECATION: the layersAspectRatioEpsilon option is no longer necessary
    * DEPRECATION: Viewer's add-layer event is now World's add-item event
    * DEPRECATION: Viewer's layer-level-changed event is now World's item-index-changed event
    * DEPRECATION: Viewer's remove-layer event is now World's remove-item event
    * DEPRECATION: Viewer's add-layer-failed event is now add-item-failed
    * Drawer has been split into three classes:
        * TiledImage, tile management and positioning for a single tiled image
        * TileCache, tile caching for all images
        * Drawer, tile drawing for all images
    * New class: World, keeps track of multiple images in the scene
    * Viewer now has world and tileCache properties
    * Rect and Point now have clone functions
    * New Viewport method for managing homeBounds as well as constraints: setHomeBounds
    * Viewport.open supports positioning config properties
* Margins option to push the home region in from the edges of the Viewer (#505)

1.2.0: (in progress)

* New combined IIIF TileSource for 1.0 through 2.0 (#441)
    * BREAKING CHANGE: Removed IIIF1_1TileSource (now that IIIFTileSource supports all versions)
* Allowed TileSources to have dynamic tileSize via source.getTileSize(level) (#441)
    * DEPRECATION: Use .getTileSize(level) instead of .tileSize
* Fix for IIPServer-style urls when using DZI (#413)
* Fix memory leak while destroying the viewer (#421)
* Added fitBoundsWithConstraints() to the viewport (#423)
* Fixed MouseTracker cross-browser issues with tracking pointers over and out of the tracked element (pull request #448, fix for #152, #404, #420, and #427)
* Fixed incorrect flick direction after image is rotated (#452)
* Debug mode now works with rotate images (#453)